kubernetes/zalando-postgres-operator/ui/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "postgres-operator-ui"
spec:
  template:
    spec:
      containers:
        - name: "service"
