kubernetes/zalando-postgres-operator/ui/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "postgres-operator-ui"
spec:
  ingressClassName: nginx
  rules:
    - host: "postgres-operator.home.lab"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "postgres-operator-ui"
                port:
                  number: 80
